# JNP3zad3

./: CMakeLists.txt  README.md
src/: D2DApp.cpp  D2DApp.h  WinMain.cpp  clock.cpp  clock.h
